--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -184,7 +184,7 @@
           <p class="muted">
             <img
               class="story-img"
-              src="images/hero_bg.png"
+              src="./images/hero_bg.png"
               alt="Фото з концерту"
               width="378"
               height="223"
@@ -313,14 +313,14 @@
           </div>
 
           <div class="divided">
-            <a class="muted text-link" href="#">Instagram</a>
-            <a class="muted text-link" href="#">YouTube</a>
-            <a class="muted text-link" href="#">Facebook</a>
+            <a class="muted text-link" target="_blank" href="#">Instagram</a>
+            <a class="muted text-link" target="_blank" href="#">YouTube</a>
+            <a class="muted text-link" target="_blank" href="#">Facebook</a>
           </div>
         </div>
       </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
